# jpeg-steganography

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Sanitizers.cmake
.github/workflows/: run-jsteg.yml
data/: lorem.txt  payload_tiny.txt
include/: jdct.hpp  jsteg.hpp
lib/: jdct.cpp  jsteg.cpp
src/: js.cpp
tests/: test_jdct_h.cpp
